# Yomine

./: .gitignore  Cargo.toml  GITHUB_ACTIONS.md  LICENSE-MIT  README.md  RELEASES.md  cliff.toml  package-lock.json  package.json  rustfmt.toml
.github/: FUNDING.yml  changelog-config.json  release-notes-template.md
.github/scripts/: compute-version.js  compute-version.mjs  ensure-tests.js  ensure-tests.mjs  generate-release-notes.js
.github/workflows/: auto-release-notes.yml  build.yml  changelog.yml  manual-release.yml  release-helper.yml  release.yml  test.yml
assets/: jlpt_vocab.json  recommended_dictionaries.json
docs/: RELEASES.md
examples/: review.rs  segment.rs
input/: short_story.txt  youtube.srt
lib/: pos.hjson
scripts/: generate_jlpt_vocab.py
specs/001-tauri-port/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-tauri-port/checklists/: requirements.md
specs/001-tauri-port/contracts/: commands.md  events.md
src/: dictionary.rs  frequency_dict.rs  lib.rs  main.rs  parser.rs  pos.rs  tokenizer.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: background.rs  dto.rs  events.rs  lib.rs  main.rs  player_task.rs  recommended.rs  state.rs
src-tauri/src/commands/: analysis.rs  anki.rs  dictionary.rs  file.rs  ignore.rs  knowledge.rs  lifecycle.rs  mining.rs  mod.rs  player.rs  recommended.rs  setup.rs  update.rs
src-tauri/ui/: .gitignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  vite.config.ts
src-tauri/ui/src/: app.css
src-tauri/ui/src/lib/: comprehension.ts  fileTree.ts  furigana.ts  ipc.ts  pos.ts  table.ts  themes.ts
src-tauri/ui/src/lib/components/: AboutModal.svelte  AnkiSettingsModal.svelte  AppearanceModal.svelte  AsbplayerModal.svelte  DefinitionPopover.svelte  DualSlider.svelte  FrequencyAnalyzerModal.svelte  FrequencyWeightsModal.svelte  Furigana.svelte  IgnoreListModal.svelte  KnowledgeSummary.svelte  PosFiltersModal.svelte  SentenceConflictModal.svelte  SentenceView.svelte  SetupBanner.svelte  SetupChecklistModal.svelte  TableControls.svelte  TermTable.svelte  TextFiltersModal.svelte  ThemeEditorModal.svelte  ThemesModal.svelte  TopBar.svelte  WebsocketSettingsModal.svelte
src-tauri/ui/src/lib/stores/: controls.ts  dictionaries.ts  file.ts  hydrate.ts  ignore.ts  index.ts  mining.ts  modals.ts  player.ts  selection.ts  settings.ts  setup.ts  status.ts  ui.ts  update.ts
src-tauri/ui/src/lib/themes/: catppuccin-latte.json  catppuccin-mocha.json  dracula.json  everforest-dark-medium.json  everforest-light-medium.json  gruvbox-dark.json  gruvbox-light.json  kanagawa-wave.json  noctis-lux.json  nord-light.json  nord.json  paper.json  rose-pine-dawn.json  rose-pine-moon.json
src-tauri/ui/src/routes/: +layout.svelte  +layout.ts  +page.svelte
src-tauri/ui/src/routes/themes/: +page.svelte
src/anki/: api.rs  comprehensibility.rs  field_guessing.rs  mined.rs  mod.rs  scoring.rs  state.rs  types.rs
src/core/: errors.rs  filename_parser.rs  http.rs  ignore_list.rs  language_tools.rs  media_server.rs  mod.rs  models.rs  pipeline.rs  recent_files.rs  settings.rs  text_filter.rs  utils.rs
src/core/tasks/: handle.rs  manager.rs  mod.rs  types.rs
src/dictionary/: frequency_dict.rs  frequency_manager.rs  frequency_utils.rs  mod.rs  token_dictionary.rs
src/gui/: actions.rs  app.rs  error_modal.rs  file_modal.rs  message_overlay.rs  mod.rs  modal.rs  restart_modal.rs  setup_banner.rs  setup_checklist_modal.rs  subtitle_select_modal.rs  table.rs  theme.rs  top_bar.rs  websocket_manager.rs
src/gui/app/: file_data.rs  mod.rs  modals.rs
src/gui/frequency_analyzer/: export_form.rs  mod.rs  modal.rs  progress_widget.rs  results_table.rs
src/gui/settings/: anki_service.rs  anki_settings_modal.rs  components.rs  data.rs  frequency_weights_modal.rs  ignore_list_modal.rs  mod.rs  modal.rs  pos_filters_modal.rs  settings_modal.rs  websocket_settings_modal.rs
src/gui/table/: controls.rs  filter.rs  header.rs  mod.rs  search.rs  sentence_column.rs  sentence_widget.rs  sort.rs  state.rs  summary.rs
src/jlpt/: mod.rs
src/lib/: greet.svelte
src/mpv/: manager.rs  mod.rs  types.rs
src/persistence/: mod.rs
src/player/: mod.rs
src/routes/: +page.svelte  layout.css
src/segmentation/: mod.rs  nbest.rs  numbers.rs  rule_matcher.rs  rule_matcher_tests.rs  segmentator.rs  token.rs  token_models.rs  tokenizer.rs  unidic_tags.rs  word.rs  word_rules.rs
src/tools/: knowledge_summary.rs  mod.rs
src/tools/analysis/: analyzer.rs  corpus_balancer.rs  file_tree.rs  mod.rs  models.rs  utils.rs
src/websocket/: connection.rs  manager.rs  mod.rs  server.rs  types.rs
src/yomitan/: mod.rs
tests/: segmentation.rs
tests/fixtures/: review_corpus.txt
tests/fixtures/segmentation/: compounds.toml  core.toml  deinflection.toml  nbest.toml  nbest_negative.toml  numbers.toml  phrases.toml  prefixes.toml  suffix_merges.toml
