[package]
name = "yomine"
version = "0.5.4"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
zip = { version = "4.3.0", features = ["xz"]}
bincode = { version = "2.0.1", features = ["serde"]}
dirs = "6.0.0"
eframe = "0.32.3"
egui_extras = "0.32.3"
egui_flex = "0.4.0"
egui_double_slider = "0.9.0"
egui_ltreeview = "0.5.3"
futures = "0.3.31"
futures-util = "0.3.30"
jp-deinflector = "0.2.0"
open = "5.0"
rand = "0.9.2"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.10", features = ["blocking", "json"] }
rfd = "0.15.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.141"
tar = "0.4.43"
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
vibrato = { git = "https://github.com/daac-tools/vibrato.git", rev = "0af7cd0" }
wana_kana = "4.0.0"
zstd = "0.13.3"
chrono = { version = "0.4.41", features = ["serde"] }
rsubs-lib = { git = "https://github.com/mcgrizzz/rsubs-lib", rev = "de70ad3b0e3b31743bdf4d17c10ed20e9beef262" }
time = "0.3.41"

# Platform-specific dependencies
#[target.'cfg(target_os = "macos")'.dependencies]
#xz2 = { version = "0.1.7", features = ["static"] }

#[target.'cfg(not(target_os = "macos"))'.dependencies]
#xz2 = "0.1.7"

[target.'cfg(target_os = "macos")'.dependencies]
liblzma = { version = "0.4.1", features = ["static"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
liblzma = "0.4.1"

