[package]
name = "yomine"
version.workspace = true
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]
members = [".", "src-tauri"]
resolver = "2"

# THE version: both crates inherit it, and tauri.conf.json (no `version` field)
# falls back to src-tauri/Cargo.toml — bump this one line to cut a release.
[workspace.package]
version = "0.6.3"

[dependencies]
zip = { version = "4.3.0", features = ["xz"]}
bincode = { version = "2.0.1", features = ["serde"]}
dirs = "6.0.0"
futures = "0.3.31"
futures-util = "0.3.30"
jp-deinflector = "0.2.0"
rand = "0.9.2"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.10", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.141"
tar = "0.4.43"
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
vibrato = { package = "vibrato-rkyv", version = "0.7.12", default-features = false, features = ["legacy"] }
wana_kana = "4.0.0"
chrono = { version = "0.4.41", features = ["serde"] }
rsubs-lib = { git = "https://github.com/mcgrizzz/rsubs-lib", rev = "de70ad3b0e3b31743bdf4d17c10ed20e9beef262" }
time = "0.3.41"

[target.'cfg(target_os = "macos")'.dependencies]
liblzma = { version = "0.4.1", features = ["static"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
liblzma = "0.4.1"

[dev-dependencies]
# Segmentation regression fixtures (tests/fixtures/segmentation/*.toml).
toml = "0.8"
