[package]
name = "yomine-tauri"
version = "0.6.0"
description = "Yomine — Japanese sentence mining (Tauri + SvelteKit shell)"
edition = "2021"
license = "MIT OR Apache-2.0"

# The Tauri app reuses the `yomine` engine crate with the egui `gui` feature OFF,
# so no egui/eframe code is compiled into this binary (Constitution IV).

[lib]
name = "yomine_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time", "macros"] }
# Dated default filename for the ignore-list export dialog (egui parity); unifies to
# the version the engine already compiles.
chrono = "0.4"
# Katakana→hiragana for furigana readings in the sentence DTO (matches the
# engine's version so only one copy is compiled).
wana_kana = "4.0.0"
yomine = { path = "..", default-features = false }

# Pin the wry runtime stack to the matched 2.11.2 set (`tauri` 2.11.2 →
# `tauri-runtime`/`tauri-runtime-wry` 2.11.2 → `wry` 0.55.1). These three must move
# in lockstep: a `tauri-runtime` vs `tauri-runtime-wry` skew breaks the build
# (`tauri-runtime` ≥2.10 added a trait method and ≥2.11 dropped a `Sync` bound that
# older `-wry` revisions don't match → E0046 + E0277). The `=` pins stop cargo from
# greedily resolving a mismatched pair; bump all three together.
tauri-runtime = "=2.11.2"
wry = "=0.55.1"
